--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <i class="fas fa-code fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">Coding</h4>
-          <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+          <p class="text-muted">Loren ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
