changing title colors

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <i class="fas fa-circle fa-stack-2x codingcolor"></i>
                         <i class="fas fa-code fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Coding</h4>
+                    <h4 class="service-heading codingcolor">Coding</h4>
                     <p class="text-muted">Loren ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
                 </div>
                 <div class="col-md-4">
