--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
         <div class="container">
+            <span class="fa-stack fa-1x">
+                        <i class="fas fa-circle fa-stack-1x placeholdercolor"></i>
+                        <i class="fas fa-exclamation-triangle fa-stack-1x fa-inverse"></i>
+                    </span>
             <a class="navbar-brand js-scroll-trigger" href="#page-top">=;'~';=</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 Menu
