--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav text-uppercase ml-auto">
-                    <li class="nav-item">
+                    <li class="nav-item-1">
                         <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item-2">
                         <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
                     </li>
                     <li class="nav-item">
