--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
 
             <!-- use https://icomoon.io/app/#/select to make a new icon -->
 
-            <a href="#page-top">    
-            <span class="fa-stack fa-1x">
+            <a href="#page-top">
+                <span class="fa-stack fa-1x">
                     <i class="fas fa-circle placeholdercolor"></i>
                 </span>
-            </a>  
+            </a>
 
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 Menu
@@ -56,13 +56,13 @@
                     <li class="nav-item-2">
                         <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item-3">
                         <a class="nav-link js-scroll-trigger" href="#about">About</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item-4">
                         <a class="nav-link js-scroll-trigger" href="#team">Team</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item-5">
                         <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
                     </li>
                 </ul>
