--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
+    <meta name="twittercard" content="summary">
+    <meta name="twitter:url" content="https://kurohikori.github.io/kaisportfolio/">
+    <meta name="twitter:title" content="Kai's Portfolio">
+    
+    <meta name="twitter:description" content="My Portfolio">
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/KuroHiKori/port/master/images/portfolio/gallery/selfpic.jpg">
+    
     <title>Kai's Portfolio</title>
 
     <!-- Bootstrap core CSS -->
