--- a/index.html
+++ b/index.html
@@ -19,13 +19,12 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <!-- Twitter Cards - Ref: https://davidwalsh.name/twitter-cards -->
+    <!-- Twitter Cards-->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:url" content="https://kurohikori.github.io/kaisportfolio/">
     <meta name="twitter:title" content="Kai's Portfolio">
     <meta name="twitter:description" content="This is a portfolio full of Kai's work.">
-    <meta name="twitter:image" content="https://1000-darth-vader.netlify.com/images/darthvader.jpg">
-
+    <meta name="twitter:image" content="img/angerycatfavcon.png">
 
 
 
