adding angery cat faces everywhere

--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
 
             <!-- use https://icomoon.io/app/#/select to make a new icon -->
 
+            
             <a href="#page-top">
                 <span class="fa-stack fa-1x">
-                    <i class="fas fa-circle placeholdercolor"></i>
+                <img class="img-fluid responsive" src="img/angerycatfavcon1.png" alt="">
                 </span>
             </a>
 
