--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 
 <head>
 
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/bootstrap-responsive.css">
+
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -101,39 +104,54 @@
                 <div class="intro-lead-in">Contact & follow me on~</div>
 
 
+                
 
-                <div class="row">
 
-                    <div class="col-md-4">
+                <div class="container">
 
-                    </div>
+                    <div class="row">
 
-                    <div class="col-md-4">
-                        <ul class="list-inline social-buttons-top-1">
-                            <li class="list-inline-item">
-                                <a href="https://twitter.com/Kai_KiKi_Beta">
-                                    <i class="fab fa-twitter twitter-top"></i>
-                                </a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="https://www.youtube.com/channel/UCupav7SVwh06Py9oWIYKgKg">
-                                    <i class="fab fa-youtube youtube-top"></i>
-                                </a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="https://www.linkedin.com/in/kai-biron/">
-                                    <i class="fab fa-linkedin-in linkedin-top"></i>
-                                </a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="https://soundcloud.com/kaiki-ki-beta">
-                                    <i class="fab fa-soundcloud soundcloud-top"></i>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
+                        <div class="col-md-4">
 
-                    <div class="col-md-4">
+                        </div>
+
+                        <div class="col-md-4">
+                            <ul class="list-inline social-buttons-top-1">
+                                <li class="list-inline-item">
+                                    <a href="https://twitter.com/Kai_KiKi_Beta">
+                                        <i class="fab fa-twitter twitter-top"></i>
+                                    </a>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a href="https://www.youtube.com/channel/UCupav7SVwh06Py9oWIYKgKg">
+                                        <i class="fab fa-youtube youtube-top"></i>
+                                    </a>
+                                </li>
+
+                                <li class="list-inline-item">
+                                    <a href="#page-top">
+                                        <span class="fa-stack fa-1x angerycatmiddle">
+                                            <img class="img-fluid responsive" src="img/angerycatfavcon1.png" alt="">
+                                        </span>
+                                    </a>
+                                </li>
+
+                                <li class="list-inline-item">
+                                    <a href="https://www.linkedin.com/in/kai-biron/">
+                                        <i class="fab fa-linkedin-in linkedin-top"></i>
+                                    </a>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a href="https://soundcloud.com/kaiki-ki-beta">
+                                        <i class="fab fa-soundcloud soundcloud-top"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+
+                        <div class="col-md-4">
+
+                        </div>
 
                     </div>
 
