--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
 
                         </div>
 
+                        // fix all this stuff
                         <div class="col-md-4">
                             <ul class="list-inline social-buttons-top-1">
                                 <li class="list-inline-item">
