--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#00aba9">
@@ -120,11 +121,13 @@
                         
                         <div class="col-md-4">
                             <ul class="list-inline social-buttons-top-1">
+ <!--                            
                                 <li class="list-inline-item">
                                     <a href="https://twitter.com/Kai_KiKi_Beta">
                                         <i class="fab fa-twitter twitter-top"></i>
                                     </a>
                                 </li>
+-->
                                 <li class="list-inline-item">
                                     <a href="https://www.youtube.com/channel/UCupav7SVwh06Py9oWIYKgKg">
                                         <i class="fab fa-youtube youtube-top"></i>
