changed the look of contact section

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class=" experience">Experience</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">In college I have had the opertunity to learn many differant aspects of media such as...</h3>
                 </div>
             </div>
             <div class="row text-center">
@@ -190,7 +190,7 @@
                         <i class="fas fa-code fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="experience-heading codingcolor">Coding</h4>
-                    <p class="text-muted">Loren ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">Leanring to code in todays world is one of the most important skills one can have. I have learned much about HTML, Java, Nativescript and much more.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -198,7 +198,7 @@
                         <i class="fas fa-drafting-compass fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="experience-heading designcolor">Design</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">Design is a key factor in all things. Everything from a logo to the colors used on a pop can must have careful thought put into them. I have learned how to use many programs to do just that such as Adobe XD, InDesign and Photoshop.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -206,19 +206,19 @@
                         <i class="fas fa-cube fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="experience-heading threedcolor">3D Modeling</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">Creating 3D models can be used to 3D print or simply be used in virtual enviroments. I have learned to use programs like 3DS Max along side Unity to create gaming enviroments that can be interacted with.</p>
                 </div>
             </div>
         </div>
     </section>
 
     <!-- Portfolio Grid -->
-    <section class="bg-light" id="portfolio">
+    <section id="portfolio">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading text-uppercase">Portfolio</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="portfolio">Portfolio</h2>
+                    <h3 class="section-subheading text-muted">Here are just a few examples of things I have worked on.</h3>
                 </div>
             </div>
             <div class="row">
@@ -392,7 +392,7 @@
     </section>
 
     <!-- Team -->
-    <section class="bg-light" id="team">
+    <section id="team">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -515,8 +515,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading text-uppercase">Contact Us</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading text-uppercase">Contact Info</h2>
+                    <h3 class="section-subheading text-white">Send me a message directly.</h3>
                 </div>
             </div>
             <div class="row">
