--- a/index.html
+++ b/index.html
@@ -226,8 +226,8 @@
                         <img class="img-fluid" src="img/portfolio/01-thumbnail.jpg" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Threads</h4>
-                        <p class="text-muted">Illustration</p>
+                        <h4>3D Modeling</h4>
+                        <p class="text-muted">Robo Dino</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -240,8 +240,8 @@
                         <img class="img-fluid" src="img/portfolio/02-thumbnail.jpg" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Explore</h4>
-                        <p class="text-muted">Graphic Design</p>
+                        <h4>Photography</h4>
+                        <p class="text-muted">Dog</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -254,8 +254,8 @@
                         <img class="img-fluid" src="img/portfolio/03-thumbnail.jpg" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Finish</h4>
-                        <p class="text-muted">Identity</p>
+                        <h4>Web Design</h4>
+                        <p class="text-muted">Client Projects</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -268,7 +268,7 @@
                         <img class="img-fluid" src="img/portfolio/04-thumbnail.jpg" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Lines</h4>
+                        <h4>placeholder</h4>
                         <p class="text-muted">Branding</p>
                     </div>
                 </div>
